# EventSystem

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/include/: abstract_delegate.h  delegate.h
src/include/solid/: abstract_event.h  abstract_event_data.h  abstract_observer.h  default_delegate.h  default_event.h  default_event_data.h  default_notification_strategy.h  delegate.h  interface_delegate.h  interface_notification_strategy.h
src/include/template/: abstract_delegate.h  abstract_event.h  abstract_notification_policy.h  basic_event.h  default_notification_policy.h  delegate.h
src/src/: delegate.cpp
src/src/solid/: delegate.cpp
test/: CMakeLists.txt  dummyTest.cpp  solidSolutionTest.cpp  templateSolutionTest.cpp
